# obs-openfx

./: CMakeLists.txt  LICENSE  README.md
data/locale/: en-US.ini
ofx-host/: ofxBinary.cpp  ofxBinary.h  ofxBinaryDiscovery.cpp  ofxBinaryDiscovery.h
ofx-obs/: ofx-source.cpp
src/: logger.h  names.h  obs-openfx.c  obs-openfx.cpp
src/ofx/: host.cpp  host.h  plugin-cache.cpp  plugin-cache.h
src/ofx-host/: BinaryDiscovery.cpp  BinaryDiscovery.h  Host.cpp  Host.h  PluginBinary.cpp  PluginBinary.h  PluginCache.cpp  PluginCache.h  ofxBinary.cpp  ofxBinary.h
src/ofx-host/image-effect/: Clip.cpp  Clip.h  ImageEffectBase.cpp  ImageEffectBase.h  ImageEffectInstance.cpp  ImageEffectInstance.h  ImageEffectPlugin.cpp  ImageEffectPlugin.h
src/ofx-host/suites/: ImageEffect.cpp  ImageEffect.h  Memory.h  Multithread.cpp  Multithread.h  Param.cpp  Param.h  Property.h
src/ofx-obs/: ofx-source.h
src/ofx/image-effect/: clip.cpp  clip.h  effect.cpp  effect.h  plugin.cpp  plugin.h
src/ofx/suites/: image-effect-suite.cpp  image-effect-suite.h  memory-suite.cpp  memory-suite.h  multithread-suite.cpp  multithread-suite.h  parameter-suite.cpp  parameter-suite.h  property-suite.cpp  property-suite.h
